# Officina

./: README.md
docs/: article.style.css  index.html  index.style.css  stem_capsula_icon_64.tiff  stem_capsula_icon_xyoutube.tiff
docs/articolo001/: 001_index.html
docs/articolo002/: 002_index.html
docs/articolo003/: 003_index.html
docs/articolo004/: 004_index.html
docs/articolo005/: 005_index.html
progetti/DilloATello/: CMakeLists.txt  DilloATello.dev  DilloATello.layout  build.sh  ffplay.txt
progetti/DilloATello/src/: UDPsocket.h  dillo_linguaggio_didattico.h  dilloatello_dillo_linguaggio_didattico.h  dilloatello_gui_commands.cpp  dilloatello_gui_commands.h  dilloatello_gui_console.cpp  dilloatello_gui_console.h  dilloatello_main.cpp  dilloatello_programmi.cpp  dilloatello_sistema.cpp  dilloatello_sistema.h  dilloatello_tello.cpp  dilloatello_tello.h  main.cpp  sistema.cpp  tello.h
progetti/DilloATello/src/ext/: imgui-SFML.cpp
progetti/DilloXL/: CMakeLists.txt  dillo_01_esempio.txt  dillo_02_esempio.txt
progetti/DilloXL/inc/: dilloxl  dilloxl_if.h  dilloxl_priv.h  dilloxl_system.h  dilloxl_tello_communication.h  dilloxl_tello_drone.h  dilloxl_ui_attitude.h  dilloxl_ui_console.h  dilloxl_ui_control.h  dilloxl_ui_editor.h  dilloxl_ui_video.h  dilloxl_user_program.h  dilloxl_video_decoder.h
progetti/DilloXL/src/: dilloxl_if.cpp  dilloxl_main.cpp  dilloxl_system.cpp  dilloxl_tello_communication.cpp  dilloxl_tello_drone.cpp  dilloxl_ui_attitude.cpp  dilloxl_ui_console.cpp  dilloxl_ui_control.cpp  dilloxl_ui_editor.cpp  dilloxl_ui_video.cpp  dilloxl_user_program.cpp  dilloxl_video_decoder.cpp
progetti/Emu4Colamonico/: CMakeLists.txt
progetti/Emu4Colamonico/src/: emu4cola_context.h  emu4cola_ext.h  emu4cola_extension.h  emu4cola_gui_commands.cpp  emu4cola_gui_commands.h  emu4cola_gui_editor.cpp  emu4cola_gui_editor.h  emu4cola_gui_memory.cpp  emu4cola_gui_memory.h  emu4cola_gui_ports.cpp  emu4cola_gui_ports.h  emu4cola_gui_registers.cpp  emu4cola_gui_registers.h  emu4cola_incs.h  emu4cola_main.cpp  emu4cola_source_file.h  emu4cola_unicorn_hooks.cpp  emu4cola_unicorn_hooks.h  emu4cola_wrapper_keystone.cpp  emu4cola_wrapper_keystone.h  emu4cola_wrapper_unicorn.cpp  emu4cola_wrapper_unicorn.h
progetti/LezioniCxx/: CMakeLists.txt
progetti/LezioniCxx/inc/: lezionicxx_priv.h  lezionicxx_system.h
progetti/LezioniCxx/src/: lezionicxx_main.cpp  lezionicxx_system.cpp
